2007-11-29  Jürg Billeter  <j@bitron.ch>

	* vala/valamemberaccess.vala, gobject/Makefile.am,
	  gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratormemberaccess.vala,
	  gobject/valaccodemethodbinding.vala: support virtual methods without
	  wrapper with the [NoWrapper] attribute, fixes bug 455874

2007-11-29  Jürg Billeter  <j@bitron.ch>

	* vala/valaaddressofexpression.vala,
	  vala/valaarraycreationexpression.vala, vala/valaassignment.vala,
	  vala/valabaseaccess.vala, vala/valabinaryexpression.vala,
	  vala/valacastexpression.vala, vala/valaconditionalexpression.vala,
	  vala/valaelementaccess.vala, vala/valaexpression.vala,
	  vala/valainitializerlist.vala, vala/valainvocationexpression.vala,
	  vala/valalambdaexpression.vala, vala/valaliteralexpression.vala,
	  vala/valamemberaccess.vala, vala/valaobjectcreationexpression.vala,
	  vala/valaparenthesizedexpression.vala,
	  vala/valapointerindirection.vala, vala/valapostfixexpression.vala,
	  vala/valareferencetransferexpression.vala,
	  vala/valasizeofexpression.vala, vala/valatypecheck.vala,
	  vala/valatypeofexpression.vala, vala/valaunaryexpression.vala: add
	  is_pure method to Expression class

2007-11-29  Jürg Billeter  <j@bitron.ch>

	* tests/: refactor tests to have more descriptive names

2007-11-29  Jürg Billeter  <j@bitron.ch>

	* configure.ac, tests/Makefile.am, tests/testenchant.vala: remove
	  enchant bindings test, we focus on compiler tests

2007-11-29  Jürg Billeter  <j@bitron.ch>

	* ccode/Makefile.am, compiler/Makefile.am, gee/Makefile.am,
	  gen-project/Makefile.am, gobject/Makefile.am, vala/Makefile.am,
	  vapigen/Makefile.am: fix distcheck

2007-11-29  Jürg Billeter  <j@bitron.ch>

	* doc/vala/Makefile.am, doc/vala/classes.xml, doc/vala/default.css,
	  doc/vala/delegates.xml, doc/vala/enums.xml, doc/vala/exceptions.xml,
	  doc/vala/expressions.xml, doc/vala/index.xml, doc/vala/interfaces.xml,
	  doc/vala/namespaces.xml, doc/vala/statements.xml,