@@ -1,3 +1,4 @@
 Inheritance Test: 1 2 3
 Static Inheritance Test: 1 2 3
 Virtual Method Test: 1 2 3
+Interface Inheritance Test: 1 2 3
